--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <div class="contenedor-juego">
         <h1>ADIVINA EL JUGADOR</h1>
         <div class="tarjeta-jugador">
-            <div class="icono-jugador"></div>
+            <div class="icono-jugador">
+                <div class="icono-frente"></div>
+                <div class="icono-dorso"></div>
+            </div>
             <div class="info-jugador">
                 <p>Nacionalidad: <span id="nacionalidad">?</span></p>
                 <p>Posición: <span id="posicion">?</span></p>
@@ -19,9 +22,18 @@
             </div>
         </div>
         <div class="escudos-equipos">
-            <div class="escudo-equipo" id="escudo-1"></div>
-            <div class="escudo-equipo" id="escudo-2"></div>
-            <div class="escudo-equipo" id="escudo-3"></div>
+            <div class="carta-equipo" id="escudo-1">
+                <div class="carta-frente"></div>
+                <div class="carta-dorso girado"></div>
+            </div>
+            <div class="carta-equipo" id="escudo-2">
+                <div class="carta-frente"></div>
+                <div class="carta-dorso girado"></div>
+            </div>
+            <div class="carta-equipo" id="escudo-3">
+                <div class="carta-frente"></div>
+                <div class="carta-dorso girado"></div>
+            </div>
         </div>
         <div class="input-respuesta">
             <input type="text" id="respuesta" list="sugerencias" placeholder="Escribe el nombre aquí">
